--- a/app/src/main/res/layout/activity_routes.xml
+++ b/app/src/main/res/layout/activity_routes.xml
@@ -4,11 +4,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="com.jesseoberstein.alert.activities.MainActivity">
+        android:padding="16sp"
+        tools:context="com.jesseoberstein.alert.activities.RoutesActivity">
 
     <ListView
             android:id="@+id/route_list"
@@ -20,13 +17,17 @@
             style="@style/Widget.AppCompat.ListView"/>
 
     <android.support.design.widget.FloatingActionButton
+            android:id="@+id/add_route"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="10dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="6dp"
             android:clickable="true"
-            android:layout_below="@+id/route_list"
+            android:focusable="true"
             android:src="@drawable/ic_action_add"
             android:onClick="increaseAlert"/>
+
 
 </RelativeLayout>
