--- a/app/src/main/res/layout/route_alert.xml
+++ b/app/src/main/res/layout/route_alert.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
     <!-- icon -->
     <ImageView
             android:id="@+id/custom_item_info_background"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_centerVertical="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginEnd="20dp"
             android:gravity="center_vertical"
             android:src="@drawable/circle_red_alert"/>
 
@@ -24,7 +22,6 @@
             android:layout_alignEnd="@+id/custom_item_info_background"
             android:gravity="center_horizontal|center_vertical"
             android:textStyle="bold"
-            android:textColor="#fff"
-            android:text="20"/>
+            android:textColor="@color/white"/>
 
 </RelativeLayout>
