--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,24 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!--List Dimensions-->
+    <dimen name="list_padding_above">8dp</dimen>
+    <dimen name="list_avatar_padding_start">16dp</dimen>
+    <dimen name="list_avatar_padding_end">16dp</dimen>
+    <dimen name="list_text_padding_start">16dp</dimen>
+    <dimen name="list_text_padding_end">16dp</dimen>
+    <dimen name="list_icon_right_size">32dp</dimen>
+    <dimen name="list_icon_right_padding_end">16dp</dimen>
+
+    <!--Single-Line List w/ Icon-->
+    <dimen name="single_line_list_tile_height">68dp</dimen>
+    <dimen name="single_line_list_avatar_size">38dp</dimen>
+    <dimen name="single_line_list_font_size_primary">22sp</dimen>
+
+    <!--Triple-Line List w/ Icon-->
+    <dimen name="triple_line_list_tile_height">88dp</dimen>
+    <dimen name="triple_line_list_avatar_size">36dp</dimen>
+    <dimen name="triple_line_list_font_size_primary">16sp</dimen>
+    <dimen name="triple_line_list_font_size_secondary">14sp</dimen>
 </resources>
