--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,7 @@
     <color name="alarm_off">#b2b2b2</color>
 
     <color name="black">#000</color>
+    <color name="gray">#555</color>
+    <color name="medium_gray">#AAA</color>
     <color name="white">#FFF</color>
 </resources>
