--- a/app/src/main/res/layout/activites_search_routes.xml
+++ b/app/src/main/res/layout/activites_search_routes.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.jesseoberstein.alert.activities.view.Routes">
+    tools:context="com.jesseoberstein.alert.activities.routes.SearchRoutes">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/routes_search_bar"
