--- a/app/src/main/res/layout/activities_create_alarm.xml
+++ b/app/src/main/res/layout/activities_create_alarm.xml
@@ -8,7 +8,7 @@
     android:paddingTop="20dp"
     android:paddingStart="@dimen/list_text_padding_start"
     android:paddingEnd="@dimen/list_text_padding_end"
-    tools:context="com.jesseoberstein.alert.activities.view.Routes">
+    tools:context="com.jesseoberstein.alert.activities.alarm.CreateAlarm">
 
     <!-- Nickname -->
     <android.support.design.widget.TextInputLayout
