--- a/app/src/main/res/layout/activities_view_alarms.xml
+++ b/app/src/main/res/layout/activities_view_alarms.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jesseoberstein.alert.activities.view.Alarms">
+    tools:context="com.jesseoberstein.alert.activities.alarms.ViewAlarms">
 
     <ListView
         android:id="@+id/alarm_list"
