--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,11 @@
     <dimen name="triple_line_list_avatar_size">36dp</dimen>
     <dimen name="triple_line_list_font_size_primary">16sp</dimen>
     <dimen name="triple_line_list_font_size_secondary">14sp</dimen>
+
+    <!--Bottom Navigation Layout-->
+    <dimen name="bottom_nav_height">50dp</dimen>
+    <dimen name="bottom_nav_padding_start">8dp</dimen>
+    <dimen name="bottom_nav_padding_end">8dp</dimen>
+    <dimen name="bottom_nav_margin_between">18dp</dimen>
+    <dimen name="default_icon_size">32dp</dimen>
 </resources>
