--- a/app/src/main/res/layout/button_direction.xml
+++ b/app/src/main/res/layout/button_direction.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
+<ToggleButton xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:textColor="@color/gray"
     android:lines="1"
-    android:ellipsize="end" />
+    android:ellipsize="end"/>
