--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
 
     <color name="alert_red">#ff0000</color>
 
-    <color name="alarm_on">#51db51</color>
+    <color name="alarm_on">#82fb82</color>
     <color name="alarm_off">#b2b2b2</color>
 
     <color name="black">#000</color>
