Fixed crashing issue when adding a new alarm.

--- a/app/src/main/res/layout/activities_create_alarm.xml
+++ b/app/src/main/res/layout/activities_create_alarm.xml
@@ -30,7 +30,7 @@
 
     </android.support.design.widget.TextInputLayout>
 
-    <include layout="input_focus_holder"/>
+    <include layout="@layout/input_focus_holder"/>
 
     <!-- Direction -->
     <LinearLayout
