--- a/app/src/main/res/layout/activities_view_routes.xml
+++ b/app/src/main/res/layout/activities_view_routes.xml
@@ -8,12 +8,22 @@
 
     <ListView
         android:id="@+id/route_list"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="@dimen/list_padding_above"
         style="@style/Widget.AppCompat.ListView"/>
+
+    <TextView
+        android:id="@+id/route_list_empty"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center_vertical"
+        android:text="@string/route_list_empty"
+        android:textAlignment="center"
+        android:textSize="@dimen/list_empty_text_size"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_route"
