--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <!--List Dimensions-->
+    <dimen name="list_empty_text_size">24sp</dimen>
     <dimen name="list_padding_above">8dp</dimen>
     <dimen name="list_avatar_padding_start">16dp</dimen>
     <dimen name="list_avatar_padding_end">16dp</dimen>
