--- a/app/src/main/res/layout/activities_view_routes.xml
+++ b/app/src/main/res/layout/activities_view_routes.xml
@@ -13,6 +13,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="@dimen/list_padding_above"
+        android:clickable="true"
+        android:focusable="true"
+        android:longClickable="true"
         style="@style/Widget.AppCompat.ListView"/>
 
     <TextView
