--- a/app/src/main/res/layout/activites_search_routes.xml
+++ b/app/src/main/res/layout/activites_search_routes.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.jesseoberstein.alert.activities.routes.SearchRoutes">
 
@@ -10,34 +12,15 @@
         android:id="@+id/routes_search_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         app:contentInsetStartWithNavigation="0dp">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <android.support.v7.widget.SearchView
-                android:id="@+id/routes_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="start|center"
-                android:layout_alignParentStart="true"
-                app:searchIcon="@null">
-            </android.support.v7.widget.SearchView>
-
-        </RelativeLayout>
+        <android.support.v7.widget.SearchView
+            android:id="@+id/routes_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:popupBackground="@android:color/transparent"
+            app:searchIcon="@null"/>
 
     </android.support.v7.widget.Toolbar>
 
-    <!--Will be useful later for station search.-->
-    <!--<AutoCompleteTextView-->
-            <!--android:id="@+id/route_search"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentTop="true"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:entries="@array/route_list"-->
-            <!--style="@style/Widget.AppCompat.AutoCompleteTextView" />-->
-
-</RelativeLayout>
+</LinearLayout>
