--- a/app/src/main/res/layout/list_search.xml
+++ b/app/src/main/res/layout/list_search.xml
@@ -17,6 +17,6 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:textSize="@dimen/single_line_list_font_size_primary"
-        android:textColor="@color/black"/>
+        android:textColor="@color/default_route"/>
 
 </LinearLayout>
