--- a/app/src/main/res/layout/activities_create_alarm.xml
+++ b/app/src/main/res/layout/activities_create_alarm.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,13 +31,54 @@
 
     <include layout="@layout/input_focus_holder"/>
 
-    <!-- Direction -->
+    <!--Lines-->
     <LinearLayout
-        android:id="@+id/directions"
+        android:id="@+id/lines_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginBottom="30dp"/>
+        android:layout_marginBottom="30dp"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/lines"
+            android:paddingStart="6dp"
+            android:layout_marginBottom="5dp"/>
+
+        <LinearLayout
+            android:id="@+id/line_buttons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <!-- Direction -->
+    <LinearLayout
+        android:id="@+id/directions_section"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="6dp"
+            android:text="@string/direction"
+            android:layout_marginBottom="5dp"/>
+
+        <GridView
+            android:id="@+id/direction_buttons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:numColumns="2"
+            android:layout_marginBottom="30dp" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/create_alarm"
