--- a/app/src/main/res/layout/activities_view_alarms.xml
+++ b/app/src/main/res/layout/activities_view_alarms.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.jesseoberstein.alert.activities.alarms.ViewAlarms">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/alarm_list"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="@dimen/list_padding_above"
-        style="@style/Widget.AppCompat.ListView"/>
+        android:layout_centerHorizontal="true"
+        android:layout_margin="5dp"
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/alarm_list_empty"
