--- a/app/src/main/res/menu/alarms_save.xml
+++ b/app/src/main/res/menu/alarms_save.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/route_alerts"
-        android:icon="@drawable/ic_info"
-        android:title="@string/app_name"
-        app:showAsAction="ifRoom"/>
+    <item android:id="@+id/save_alarm"
+        android:icon="@drawable/ic_done"
+        android:title="@string/save_alarm_menu"
+        app:showAsAction="always"/>
 </menu>
