--- a/app/src/main/res/layout/activities_view_alarms.xml
+++ b/app/src/main/res/layout/activities_view_alarms.xml
@@ -34,7 +34,8 @@
         android:layout_margin="@dimen/list_avatar_padding_start"
         android:clickable="true"
         android:focusable="true"
-        android:src="@drawable/ic_action_add" />
+        android:src="@drawable/ic_add"
+        android:tint="@color/white"/>
 
 
 </RelativeLayout>
