--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,15 @@
     <color name="colorPrimaryDark">#337b96</color>
     <color name="colorAccent">#f64b4b</color>
 
-    <color name="blue_line">#2a4b9a</color>
-    <color name="green_line">#389000</color>
-    <color name="red_line">#d61010</color>
-    <color name="orange_line">#ff8f16</color>
-    <color name="silver_line">#c2c2c2</color>
+    <!-- MBTA colors from: https://www.mbta.com/style-guide/components/colors -->
+    <color name="blue_line">#003da5</color>
+    <color name="commuter">#80276c</color>
+    <color name="ferry">#008eaa</color>
+    <color name="green_line">#00843d</color>
+    <color name="orange_line">#ed8b00</color>
+    <color name="red_line">#da291c</color>
+    <color name="silver_line">#7c878e</color>
+    <color name="bus">#ffc72c</color>
 
     <color name="alert_red">#ff0000</color>
 
