--- a/app/src/main/res/layout/fragment_alarm_settings_time.xml
+++ b/app/src/main/res/layout/fragment_alarm_settings_time.xml
@@ -4,19 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="@dimen/list_padding_above"
-        android:paddingStart="@dimen/list_text_padding_start"
-        android:paddingEnd="@dimen/list_text_padding_end">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Time settings placeholder"/>
-
-    </LinearLayout>
+    <include layout="@layout/fragment_alarm_settings_section"
+        android:id="@+id/alarmSettings_time"/>
 
 </LinearLayout>
