ALERT-56: Created repeat type section (including custom repeat).

--- a/app/src/main/res/layout/fragment_alarm_settings_time.xml
+++ b/app/src/main/res/layout/fragment_alarm_settings_time.xml
@@ -20,6 +20,10 @@
             android:id="@+id/alarmSettings_name"
             bind:alarm="@{alarm}"/>
 
+        <include layout="@layout/fragment_alarm_settings_section_repeat"
+            android:id="@+id/alarmSettings_repeat"
+            bind:alarm="@{alarm}"/>
+
     </LinearLayout>
 
 </layout>
