ALERT-69: Added a 'next firing time' section in the time settings tab.

--- a/app/src/main/res/layout/activities_edit_alarm.xml
+++ b/app/src/main/res/layout/activities_edit_alarm.xml
@@ -7,7 +7,7 @@
     tools:context="com.jesseoberstein.alert.activities.alarm.EditAlarm">
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/alarm_pager"
+        android:id="@+id/alarm_settings_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </android.support.v4.view.ViewPager>
